--- a/my-app/src/scss/main.scss
+++ b/my-app/src/scss/main.scss
@@ -97,3 +97,35 @@ a {
   padding: 13px 51px 13px 51px;
   margin-left: 30px;
 }
+.homeMainContainer {
+  width: 1900px;
+}
+.columnsContainer {
+  display: flex;
+  justify-content: space-around;
+  background: $colorYellow;
+  color: $colorDarkGrey;
+}
+.column {
+  width: 334px;
+  text-align: center;
+  margin: 0 auto;
+  color: $colorBrown;
+}
+.columnNumber {
+  margin:46px 0 10px 0;
+  font-size: 90px;
+}
+.columnTitle {
+  margin-bottom: 28px;
+  text-transform: uppercase;
+  font-size: 18px;
+  letter-spacing: -0.36px;
+}
+.columnText {
+  font-family: $font-alt;
+  letter-spacing: -0.32px;
+  font-size: 16px;
+  line-height: 28px;
+  margin-bottom: 86px;
+}
