About Us section

--- a/my-app/src/scss/main.scss
+++ b/my-app/src/scss/main.scss
@@ -44,6 +44,7 @@ a {
   font-size: 18px;
   color: $colorDarkGrey;
   justify-content: flex-end;
+  cursor: pointer;
 }
 .menuList li {
   padding: 9px 22px 9px 23px;
