--- a/my-app/src/scss/main.scss
+++ b/my-app/src/scss/main.scss
@@ -402,6 +402,10 @@ a {
 .listPagination > li {
   padding: 13px 15px 13px 15px;
   margin: 0 11.07px 0 11.07px;
+  border: 1px solid transparent;
+}
+.listPagination > li:active {
+  border: 1px solid $colorGrey;
 }
 .listPaginationActive {
   border: 1px solid $colorGrey;
