--- a/my-app/src/scss/main.scss
+++ b/my-app/src/scss/main.scss
@@ -403,6 +403,7 @@ a {
   padding: 13px 15px 13px 15px;
   margin: 0 11.07px 0 11.07px;
   border: 1px solid transparent;
+  cursor: pointer;
 }
 .listPagination > li:active {
   border: 1px solid $colorGrey;
