--- a/my-app/src/scss/main.scss
+++ b/my-app/src/scss/main.scss
@@ -256,6 +256,9 @@ a {
   font-size: 16px;
   font-weight: bolder;
 }
+.contactForm label {
+  padding-top: 40px;
+}
 .contactForm input,
 .contactForm textarea {
   font-size: 18px;
@@ -266,10 +269,10 @@ a {
   font-family: $font-base;
 }
 .footerDecoration {
-  margin:0 100px 80px 0;
+  margin:0 100px 40px 0;
 }
 .contactForm input {
-  margin: 12px 16px 40px 0;
+  margin: 12px 16px 12px 0;
 }
 .contactForm textarea {
   margin: 12px 0 12px 0;
@@ -408,6 +411,16 @@ a {
 .listPagination > li:active {
   border: 1px solid $colorGrey;
 }
-.listPaginationActive {
+.listPagination .listPaginationActive {
   border: 1px solid $colorGrey;
+}
+.errorInfo {
+  color: red;
+}
+.messageSend {
+  color: green;
+  font-size: 20px;
+  font-weight: bolder;
+  text-align: center;
+  width: 570px;
 }
