--- a/my-app/src/scss/main.scss
+++ b/my-app/src/scss/main.scss
@@ -424,3 +424,44 @@ a {
   text-align: center;
   width: 570px;
 }
+.regNavigationContainer {
+  margin: 37px 139px 0 0;
+}
+.regContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.regActionContainer {
+  display: flex;
+}
+.regTitle {
+  font-family:$font-base;
+  font-size: 40px;
+  color: $colorDarkGrey;
+  text-align: center;
+  letter-spacing: -0.8px;
+  margin: 90px 0 25px 0;
+}
+.regForm {
+  margin: 60px 0 0 0;
+  background: $colorWhite;
+  width: 384px;
+  height: 328px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.regLogin,
+.regRegister {
+  font-family: $font-base;
+  font-size: 18px;
+  color: black;
+  padding: 13px 11px 13px 12px;
+  margin: 53px 0 122px 0;
+}
+.regRegister {
+  border: 0.75px solid $colorDarkGrey;
+  margin-left: 285px;
+}
