--- a/my-app/src/scss/main.scss
+++ b/my-app/src/scss/main.scss
@@ -491,7 +491,7 @@ a {
 .logForm label:nth-of-type(1) {
   margin-top: 25px;
 }
-.regForm input,
+.regFormInput,
 .logFormInput {
   background: $colorWhite;
   border: none;
